--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^7.0.2",
     "axios": "^1.7.7",
     "moment": "^2.30.1",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "^2.20.2",
