--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/firestore": "^21.4.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/native-stack": "^7.0.2",
     "axios": "^1.7.7",
