--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^21.4.0",
@@ -25,6 +26,7 @@
     "react-native": "0.76.1",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-iconify": "^1.0.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.20.0",
     "react-native-onboarding-swiper": "^1.3.0",
