--- a/ios/EcgTrack/Info.plist
+++ b/ios/EcgTrack/Info.plist
@@ -56,6 +56,7 @@
 		<string>Poppins-Regular.ttf</string>
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Poppins-Thin.ttf</string>
+		<string>Poppins-LightItalic.ttf</string>
 	</array>
 </dict>
 </plist>
