--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -14,6 +14,10 @@
       "sha1": "e247a92158e112f8bf7b638c8d95381d66b00dbb"
     },
     {
+      "path": "assets/fonts/Poppins-LightItalic.ttf",
+      "sha1": "f76102b361e705751a83b7b22fe954daf1f27dd4"
+    },
+    {
       "path": "assets/fonts/Poppins-Medium.ttf",
       "sha1": "283f21b44efbdbf276ba802be2d949a36bbc4233"
     },
