--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-iconify": "^1.0.1",
     "react-native-image-picker": "^7.1.2",
