--- a/package.json
+++ b/package.json
@@ -18,19 +18,24 @@
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/firestore": "^21.4.0",
     "@react-native-picker/picker": "^2.9.0",
+    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/material-top-tabs": "^7.0.18",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/native-stack": "^7.0.2",
     "axios": "^1.7.7",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-document-picker": "^9.3.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-iconify": "^1.0.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.20.0",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-pager-view": "^6.6.1",
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^5.1.0",
     "react-native-reanimated": "^3.16.1",
